--- a/templates/app/conteudo.html
+++ b/templates/app/conteudo.html
@@ -14,7 +14,7 @@
                 <li><a href="/">Início</a></li>
                 <li><a href="/sobre/">Sobre</a></li>
                 <li><a href="/contato/">Contato</a></li>
-                <li><a href="{% url 'logout' %}">Logout</a></li>
+                <li><a href="{% url 'logout' %}">Logoutt</a></li>
             </ul>
         </nav>
         {% for message in messages %}
